2019-07-05  Omar Sandoval  <osandov@fb.com>

	* Makefile.am (libdw_so_LIBS): Replace libebl.a with libebl_pic.a.
	Move libebl_pic.a to the beginning so that libdw symbols are resolved.
	(libdw_so_LDLIBS): Remove -ldl.
	(libdw.so): Remove -rpath.
	(libdw_a_LIBADD): Add libebl, libebl_backends, and libcpu objects.

2019-08-25  Jonathon Anderson  <jma14@rice.edu>

	* dwarf_getcfi.c (dwarf_getcfi): Set default_same_value to false.

2019-08-12  Mark Wielaard  <mark@klomp.org>

	* libdw.map (ELFUTILS_0.177): Add new version of dwelf_elf_begin.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* libdw.map (ELFUTILS_0.177): New section. Add
	dwelf_elf_e_machine_string.

2019-05-16  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_AT_GNU_numerator, DW_AT_GNU_denominator and
	DW_AT_GNU_bias.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* dwarf_siblingof.c (dwarf_siblingof): Don't initialize addr.

2019-04-28  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (dwarf_getlocation_addr): Call
	check_constant_offset with llbufs and listlens directly.

2019-04-27  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (store_implicit_value): Check dbg isn't
	NULL.

2019-02-02  Mark Wielaard  <mark@klomp.org>

	* dwarf_nextcu.c (__libdw_next_unit): Define bytes_end.
	Check there are enough bytes to read extended lenght, version
	and unit.

2019-01-20  Mark Wielaard  <mark@klomp.org>

	* dwarf_getsrclines.c (read_srclines): Check terminating NUL byte
	for dir and file lists.

2018-10-23  Mark Wielaard  <mark@klomp.org>

	* dwarf_child.c (__libdw_find_attr): Initialize readp to NULL.
	* dwarf_getattrs.c (dwarf_getattrs): Initialize die_addr to NULL.

2018-10-20  Mark Wielaard  <mark@klomp.org>

	* libdw.map (ELFUTILS_0.175): New section. Add dwelf_elf_begin.

2018-10-29  Milian Wolff  <milian.wolff@kdab.com>

	* dwarf_getcfi_elf.c (getcfi_shdr): Check sh_type != SHT_NOBITS.

2018-09-13  Mark Wielaard  <mark@klomp.org>
